Fix about page spacing issue, add + link icons per person

--- a/production/client/public/styles.css
+++ b/production/client/public/styles.css
@@ -473,9 +473,10 @@ code {
 /*About Us page styling*/
 
 #aboutpage{
-  margin-top: 130px;
+  padding-top:20px;
   width:95%;
   margin-left:2.5%;
+  position: relative;
 }
 
 #aboutpage h1 {
@@ -485,6 +486,7 @@ code {
 #aboutpage h2 {
   margin-bottom:10px;
   margin-top:30px;
+
 }
 
 article {
